--- a/apps/front/src/app/view/view.component.html
+++ b/apps/front/src/app/view/view.component.html
@@ -4,8 +4,8 @@
   </div>
 </div>
 
-<div class="py-4 ms-4" hidden #container>
-  <div class="d-flex mx-3">
+<div class="py-4 sets" hidden #container>
+  <div class="d-flex header">
     <h2>Your sets</h2>
   </div>
   <div class="row row-cols-1 row-cols-md-4 g-4 py-4 px-3 w-100">
