--- a/apps/front/src/app/view/study-set/view-study-sets.component.scss
+++ b/apps/front/src/app/view/study-set/view-study-sets.component.scss
@@ -2,3 +2,20 @@
   width: 6rem;
   height: 6rem;
 }
+
+.carousel {
+  margin-left: 20rem;
+  margin-right: 20rem;
+}
+
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+  .set-view {
+    width: 100%;
+  }
+}
+
+@media only screen and (min-device-width : 768px) and (max-device-width : 7680px) {
+  .set-view {
+    width: 75%;
+  }
+}
