--- a/apps/front/src/app/view/view.component.scss
+++ b/apps/front/src/app/view/view.component.scss
@@ -2,3 +2,24 @@
   width: 6rem;
   height: 6rem;
 }
+
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+  .sets {
+    margin-left: 1.5rem;
+  }
+
+  .header {
+    margin-left: 1rem;
+  }
+}
+
+@media only screen and (min-device-width : 768px) and (max-device-width : 7680px) {
+  .sets {
+    margin-left: 2rem;
+    margin-right: 0.5rem;
+  }
+
+  .header {
+    margin-left: 1rem;
+  }
+}
