Add new study set card component, add new authentication to sets controller, add UserWithRelations type

--- a/apps/front/src/app/view/study-set/view-study-sets.component.html
+++ b/apps/front/src/app/view/study-set/view-study-sets.component.html
@@ -4,7 +4,7 @@
   </div>
 </div>
 
-<div class="container-fluid set-view overflow-hidden">
+<div class="container-fluid set-view overflow-hidden" #container hidden>
   <div class="d-flex justify-content-center mt-2">
     <h1>{{title}}</h1>
   </div>
@@ -27,14 +27,7 @@
     </div>
   </div>
   <hr>
-</div>
-
-<div class="card" style="width: 18rem;">
-  <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <a href="#" class="card-link">Card link</a>
-    <a href="#" class="card-link">Another link</a>
+  <div class="d-flex justify-content-center w-100">
+    <scholarsome-study-set-card></scholarsome-study-set-card>
   </div>
 </div>
