Add cards in study set view page, and fix card spacing

--- a/apps/front/src/app/view/study-set/view-study-sets.component.html
+++ b/apps/front/src/app/view/study-set/view-study-sets.component.html
@@ -27,7 +27,9 @@
     </div>
   </div>
   <hr>
-  <div class="d-flex justify-content-center w-100">
-    <scholarsome-study-set-card></scholarsome-study-set-card>
+  <div class="container-fluid align-items-center" #cards>
+    <div class="mb-4">
+      <h5>{{setLength}} term{{setLength > 1 ? 's' : ''}} in this set</h5>
+    </div>
   </div>
 </div>
