--- a/apps/front/src/app/view/study-set/study-set-card/study-set-card.component.html
+++ b/apps/front/src/app/view/study-set/study-set-card/study-set-card.component.html
@@ -1,9 +1,14 @@
-<div class="card">
-  <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <a href="#" class="card-link">Card link</a>
-    <a href="#" class="card-link">Another link</a>
+<div class="study-set-card card mt-2">
+  <div class="card list-group-item rounded-2 w-100">
+    <div class="card-body w-100">
+      <div class="container-fluid row">
+        <div class="col border-end fs-5 w-50">
+          {{term}}
+        </div>
+        <div class="col fs-5 w-50">
+          {{definition}}
+        </div>
+      </div>
+    </div>
   </div>
 </div>
