--- a/apps/front/src/app/view/study-set/view-study-sets.component.html
+++ b/apps/front/src/app/view/study-set/view-study-sets.component.html
@@ -10,7 +10,7 @@
   </div>
   <div class="d-flex justify-content-evenly">
     <div class="row-cols-sm-4 col-md-6 m-auto w-50">
-      <button type="button" class="btn btn-lg btn-light bg-white w-100 my-2 shadow"><fa-icon [icon]="['far', 'clone']"></fa-icon> Flashcards</button>
+      <a [routerLink]="'/view/sets/{{setId}}/flashcards'"><button type="button" class="btn btn-lg btn-light bg-white w-100 my-2 shadow"><fa-icon [icon]="['far', 'clone']"></fa-icon> Flashcards</button></a>
       <button type="button" class="btn btn-lg btn-light bg-white w-100 shadow" disabled><fa-icon [icon]="['far', 'comments']"></fa-icon> Study</button>
     </div>
     <div class="row-cols-sm-4 col-md-6 m-auto w-50">
