Add flashcards page and fix flashcards link

--- a/apps/front/src/app/view/study-set/study-set-flashcards/study-set-flashcards.component.html
+++ b/apps/front/src/app/view/study-set/study-set-flashcards/study-set-flashcards.component.html
@@ -3,3 +3,9 @@
     <span class="visually-hidden">Loading...</span>
   </div>
 </div>
+
+<div class="container-fluid" #container>
+  <div class="card">
+    <div class="card-body text-center fs-3"></div>
+  </div>
+</div>
