Fix 404 page, add new flashcard component

--- a/apps/front/src/app/shared/notfound/notfound.component.html
+++ b/apps/front/src/app/shared/notfound/notfound.component.html
@@ -1,10 +1,10 @@
-<div class="d-flex text-center justify-content-center mt-5">
+<div class="d-flex text-center justify-content-center mt-5 mx-2">
   <div class="col">
     <div class="row">
       <h1 class="fw-bold display-2">Whoops, we couldn't find that page!</h1>
     </div>
     <div class="row mt-3">
-      <h1>We couldn't find that page!</h1>
+      <p class="fs-2">The page you're looking for doesn't exist</p>
     </div>
   </div>
 </div>
