--- a/apps/front/src/app/view/study-set/study-set-flashcards/study-set-flashcards.component.html
+++ b/apps/front/src/app/view/study-set/study-set-flashcards/study-set-flashcards.component.html
@@ -4,8 +4,10 @@
   </div>
 </div>
 
-<div class="container-fluid" #container>
-  <div class="card">
-    <div class="card-body text-center fs-3"></div>
+<div class="mt-5" #container></div>
+
+<div class="w-100 bg-white fixed-bottom shadow text-center">
+  <div class="fs-4">
+    aaaaaaaaaaaaaaaaaaaaaaaaaaa
   </div>
 </div>
