--- a/apps/front/src/app/view/study-set/view-study-sets.component.html
+++ b/apps/front/src/app/view/study-set/view-study-sets.component.html
@@ -19,7 +19,7 @@
     </div>
   </div>
   <div class="d-flex justify-content-between mt-4">
-    <div>
+    <div class="mt-2">
       <fa-icon [icon]="['far', 'user']"></fa-icon> Created by {{author}}
     </div>
     <div>
