--- a/apps/front/src/app/view/study-set/study-set-flashcards/study-set-flashcards.component.html
+++ b/apps/front/src/app/view/study-set/study-set-flashcards/study-set-flashcards.component.html
@@ -7,16 +7,17 @@
 <div hidden #container>
   <div class="container-fluid flashcard-container" style="max-width: 100%; min-width: 100%;">
     <div class="row justify-content-center align-items-center">
-      <div class="flashcard card text-center shadow-sm w-75" (click)="flipCard()" #flashcard>
+      <div class="flashcard card text-center shadow-sm w-75" #flashcard>
         <!-- style="height: 60vh;" -->
-        <div class="card-body fs-1" onmousedown="return false"></div>
+        <div class="card-body fs-1" onmousedown="return false" (click)="flipCard()"></div>
         <hr>
         <div class="mt-2 d-flex justify-content-around align-items-center" *ngIf="cards">
-          <button type="button" class="fs-4 w-25 btn btn-outline-secondary mb-3" (click)="changeCard(-1)" [attr.disabled]="index === 0 ? true : null"><fa-icon [icon]="['far', 'arrow-alt-circle-left']"></fa-icon></button>
-          <button type="button" class="fs-4 w-25 btn btn-outline-secondary mb-3" (click)="changeCard(1)" [attr.disabled]="cards.length === index + 1 ? true : null"><fa-icon [icon]="['far', 'arrow-alt-circle-right']"></fa-icon></button>
+          <button type="button" class="fs-4 w-25 btn btn-outline-secondary mb-3" (click)="changeCard(-1)" [disabled]="index === 0 ? true : null"><fa-icon [icon]="['far', 'arrow-alt-circle-left']"></fa-icon></button>
+          <button type="button" class="fs-4 w-25 btn btn-outline-secondary mb-3" (click)="changeCard(1)" [disabled]="cards.length === index + 1 ? true : null"><fa-icon [icon]="['far', 'arrow-alt-circle-right']"></fa-icon></button>
         </div>
-        <div class="mx-2 d-flex justify-content-start align-items-center">
+        <div class="mx-2 d-flex justify-content-between align-items-center">
           <p class="text-secondary">{{side}}</p>
+          <fa-icon class="fs-4 mb-2 text-secondary shuffle" tooltip="Enable shuffle" (click)="this.shuffleCards()" [delay]="500" [style.color]="shuffle ? '#8438ff !important' : '#6c757d !important'" [icon]="['far', 'rectangle-list']"></fa-icon>
         </div>
       </div>
     </div>
@@ -26,7 +27,7 @@
     <fa-icon class="fs-2 back-arrow" [routerLink]="['/view', 'sets', setId]" [icon]="['far', 'arrow-alt-circle-left']"></fa-icon>
     <div class="fs-2"></div>
     <div class="ms-2 my-2">
-      <button type="button" class="btn btn-outline-primary" (click)="this.openSettings();">Settings</button>
+      <button type="button" class="btn btn-outline-primary" (click)="this.modalRef = this.modalService.show(this.settings);">Settings</button>
     </div>
   </div>
 </div>
@@ -39,13 +40,12 @@
     </button>
   </div>
   <div class="modal-body">
-    <div class="fs-5 mb-1">Answer with</div>
-    <div class="btn-group" role="group" aria-label="Basic radio toggle button group" #answerWith>
-      <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" (click)="answer = 'Term'">
-      <label class="btn btn-outline-secondary" for="btnradio1">Term</label>
-
-      <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off" (click)="answer = 'Definition'">
-      <label class="btn btn-outline-secondary" for="btnradio2">Definition</label>
+    <div class="mb-1 fs-5">Answer with</div>
+    <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
+      <input type="radio" class="btn-check" name="definitionRadio" id="definition" autocomplete="off" [checked]="answer === 'Definition'" (click)="answer = 'Definition'">
+      <label class="btn btn-outline-secondary fs-6" for="definition">Definition</label>
+      <input type="radio" class="btn-check" name="termRadio" id="term" autocomplete="off" [checked]="answer === 'Term'" (click)="answer = 'Term'">
+      <label class="btn btn-outline-secondary" for="term">Term</label>
     </div>
   </div>
 </ng-template>
