--- a/apps/front/src/app/shared/header/header.component.scss
+++ b/apps/front/src/app/shared/header/header.component.scss
@@ -4,6 +4,10 @@
   z-index: 1050;
 }
 
+.recaptcha-text > a {
+  color: gray !important;
+}
+
 .navbar-nav > li {
   padding-left:10px;
   padding-right:10px;
