--- a/apps/front/src/app/create/study-set/create-study-set.component.html
+++ b/apps/front/src/app/create/study-set/create-study-set.component.html
@@ -23,7 +23,7 @@
     </div>
     <div class="container-fluid">
       <div class="row mx-3">
-        <ng-template scholarsomeCardList></ng-template>
+        <ng-template #cardList></ng-template>
       </div>
     </div>
     <div class="container-fluid">
