--- a/apps/front/src/app/shared/header/header.component.html
+++ b/apps/front/src/app/shared/header/header.component.html
@@ -97,6 +97,7 @@
       <div class="mb-3">
         <label for="register-username" class="form-label">Username</label>
         <input type="text" class="form-control" id="register-username" name="username" ngModel required>
+        <div *ngIf="registrationReq === 200" class="form-text text-success">Thanks! You can now sign in.</div>
         <div *ngIf="registrationReq === 201" class="form-text text-success">Thanks! Check your email for a message from us and click on the link to verify your account.</div>
         <div *ngIf="registrationReq === 500" class="form-text text-danger">There was an issue with registration.</div>
         <div *ngIf="registrationReq === 409" class="form-text text-danger">That username or email already has an account.</div>
