--- a/apps/front/src/app/shared/header/header.component.scss
+++ b/apps/front/src/app/shared/header/header.component.scss
@@ -17,6 +17,10 @@
   text-decoration-color: #8438ff !important;
 }
 
+.github:hover {
+  color: #8438ff !important;
+}
+
 .nav-link:hover {
   text-decoration: underline;
 }
