--- a/apps/front/src/app/view/study-set/study-set-flashcards/study-set-flashcards.component.html
+++ b/apps/front/src/app/view/study-set/study-set-flashcards/study-set-flashcards.component.html
@@ -42,9 +42,9 @@
   <div class="modal-body">
     <div class="mb-1 fs-5">Answer with</div>
     <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
-      <input type="radio" class="btn-check" name="definitionRadio" id="definition" autocomplete="off" [checked]="answer === 'Definition'" (click)="answer = 'Definition'">
+      <input type="radio" class="btn-check" name="definitionRadio" id="definition" autocomplete="off" [checked]="answer === 'Definition'" (click)="answer = 'Definition'; (side === answer) && flipCard();">
       <label class="btn btn-outline-secondary fs-6" for="definition">Definition</label>
-      <input type="radio" class="btn-check" name="termRadio" id="term" autocomplete="off" [checked]="answer === 'Term'" (click)="answer = 'Term'">
+      <input type="radio" class="btn-check" name="termRadio" id="term" autocomplete="off" [checked]="answer === 'Term'" (click)="answer = 'Term'; (side === answer) && flipCard();">
       <label class="btn btn-outline-secondary" for="term">Term</label>
     </div>
   </div>
