--- a/apps/front/src/app/view/study-set/view-study-sets.component.html
+++ b/apps/front/src/app/view/study-set/view-study-sets.component.html
@@ -22,16 +22,33 @@
     <div class="mt-2">
       <fa-icon [icon]="['far', 'user']"></fa-icon> Created by {{author}}
     </div>
-    <div></div>
     <div>
       <button type="button" class="btn btn-light bg-white rounded-circle shadow"><fa-icon [icon]="['far', 'user']"></fa-icon></button>
     </div>
   </div>
   <hr>
-  <div class="container-fluid align-items-center">
-    <div class="mb-4">
-      <h5 *ngIf="cards">{{cards.length}} term{{cards.length > 1 ? 's' : ''}} in this set</h5>
+  <div class="container-fluid">
+    <div class="d-flex justify-content-between">
+      <h5>{{this.cards.length}} term{{this.cards.length > 1 ? 's' : ''}} in this set</h5>
+      <div>
+        <button type="submit" class="btn btn-primary" [hidden]="editing" (click)="editCards()">Edit</button>
+        <div class="d-flex">
+          <button type="submit" class="btn btn-primary mx-2" [hidden]="!editing" (click)="viewCards()">Save</button>
+          <button type="submit" class="btn btn-secondary" [hidden]="!editing" (click)="viewCards()">Cancel</button>
+        </div>
+      </div>
     </div>
-    <div #cardsContainer></div>
+    <div>
+      <div #cardsContainer></div>
+      <div class="container-fluid" [hidden]="!editing">
+        <div class="row">
+          <div class="card my-3 bg-white">
+            <div class="card-body d-flex justify-content-center mt-2 fs-4 new-card" (click)="addCard()">
+              <p><fa-icon [icon]="['far', 'plus-square']" class="pe-1"></fa-icon>Add new card</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
