Add card spacing, add frontend API interaction methods, fix alert timeout spacing

--- a/apps/front/src/app/shared/alert/alert.component.html
+++ b/apps/front/src/app/shared/alert/alert.component.html
@@ -1,2 +1,2 @@
-<div class="{{spacingClass}}"></div>
+<div class="{{spacingClass}}" #spacing ></div>
 <alert type="{{type}}" dismissOnTimeout="{{dismiss ? 3000 : undefined}}">{{message}}</alert>
