Condense authentication methods and fix linting issues

--- a/apps/front/src/app/view/study-set/study-set-flashcards/study-set-flashcards.component.html
+++ b/apps/front/src/app/view/study-set/study-set-flashcards/study-set-flashcards.component.html
@@ -32,7 +32,7 @@
   </div>
 </div>
 
-<ng-template #settings>
+<ng-template>
   <div class="modal-header">
     <h4 class="modal-title pull-left fs-1">Settings</h4>
     <button type="button" class="btn-close close pull-right" aria-label="Close" (click)="modalRef?.hide()">
