--- a/apps/front/src/styles.scss
+++ b/apps/front/src/styles.scss
@@ -7,7 +7,7 @@ $primary: #8438ff;
 @import 'bootstrap';
 
 body {
-  background-color: #f6f7fb;
+  background-color: white;
 }
 
 .show > .btn-primary.dropdown-toggle {
