Remove unneeded svg and fix logout bug

--- a/apps/front/src/app/landing/landing.component.scss
+++ b/apps/front/src/app/landing/landing.component.scss
@@ -103,7 +103,7 @@
   margin-top: 10%;
 }
 
-//html {
-//  overflow-y: hidden !important;
-//  overflow-x: hidden !important;
-//}
+html {
+  overflow-y: hidden !important;
+  overflow-x: hidden !important;
+}
